--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Lakshay Goyal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animation.css">
+    <link rel="icon" href="LAKSHAY GOYAL.png">
 </head>
 <body>
     <header>
